# flipper_training

./: CLAUDE.md  CMakeLists.txt  package.xml  pyproject.toml  requirements.txt
cli_tools/: fram2clip.py
cross_eval_configs/: barrier_easy.yaml  barrier_hard.yaml  file_natural.yaml  file_natural_cracks.yaml  file_ridge.yaml  file_sine.yaml  gauss_coarse_easy.yaml  gauss_coarse_hard.yaml  gauss_fine_easy.yaml  gauss_fine_hard.yaml  stairs_easy.yaml  stairs_hard.yaml  trunk_easy.yaml  trunk_hard.yaml
final_training_configs/: barrier.yaml  barrier_pretrained.yaml  gaussian_coarse.yaml  gaussian_fine.yaml  gaussian_fine_long.yaml  mixed_training.yaml  mixed_training_smoothness.yaml  mixed_training_weighted.yaml  stairs_from_pretrained.yaml  stairs_from_scratch.yaml  stairs_from_scratch_extra_reward.yaml  stairs_pretrained_extra_reward.yaml  trunk.yaml
flipper_training/: __init__.py
flipper_training/configs/: robot_config.py
flipper_training/environment/: env.py  ftr_env_adapter.py  transforms.py
flipper_training/experiments/grad/: config.py
flipper_training/experiments/ppo/: eval_data.py  eval_ftr.py  eval_ftr_rand.py  eval_optuna_top.py  ftr_policy_inference_module.py  optuna_eval_rand.py  optuna_train.py  optuna_train_ftr.py  policy_inference_module.py  recover_optuna_trials.py  train_ftr.py  train_ftr_compat.py
flipper_training/heightmaps/: ftr_terrain.py  pallets.py  trunks.py
flipper_training/observations/: __init__.py  ftr_compat_obs.py  ftr_flat_obs.py  heightmap.py  robot_state.py
flipper_training/policies/: heightmap_flipper_policy.py  mlp_policy.py  random_policy.py
flipper_training/rl_objectives/: random_nav.py
flipper_training/rl_rewards/: ftr_compat_reward.py  rewards.py
flipper_training/ros2/: __init__.py  flipper_policy.launch.py  flipper_policy_node.py  render_images.py
flipper_training/utils/: logutils.py  torch_utils.py
launch/: flipper_policy.launch.py
notebooks/: final_eval_plotting_multipolicy.ipynb  local_heighmap_crop_resize.ipynb  plot_single_training.ipynb  ppo_policy_inference.ipynb
ros2/: flipper_policy.launch.py  flipper_policy_node.py  how_to_run_for_gazebo.bck.md  how_to_run_for_gazebo.md  plot_heightmap_debug.py  render_images.py  send_goal.py
ros2/flipper_policy_bag/: flipper_policy_bag_0.mcap  metadata.yaml
slurm/: train_ftr.sbatch
sota_configs/: random_trunk_random_start_goal_sota.yaml  random_trunk_with_control_smoothness.yaml
test_configs/: average_ensembled_policy.yaml  average_ensembled_policy_all.yaml  average_ensembled_policy_multiple_pallets.yaml  average_ensembled_policy_original.yaml  deterministic_flats_debug.yaml  deterministic_flats_debug_with_heightmap.yaml  deterministic_trunk_debug.yaml  fixed_barrier_random_start_goal_latent_params.yaml  fixed_stairs_fixed_start_goal.yaml  fixed_trunk_random_start_goal.yaml  gaussian_coarse_smoothness.yaml  gpu_nondeterminism.yaml  gradient_explode.yaml  mixed_training.yaml  mixed_training_smoothness.yaml  mixed_training_weighted.yaml  optuna_for_barrier_gru.yaml  optuna_for_fixed_barrier_random_start_goal_with_latents.yaml  optuna_for_fixed_stairs_fixed_start_goal.yaml  optuna_for_gaussian_coarse.yaml  optuna_for_gaussian_fine.yaml  optuna_for_gaussian_fine_pretrained.yaml  optuna_for_mixed.yaml  optuna_for_mixed_weighted.yaml  optuna_for_random_barrier.yaml  optuna_for_random_barrier_from_pretrained.yaml  optuna_for_random_stairs_from_pretrained.yaml  optuna_for_random_stairs_from_pretrained_no_extra_reward.yaml  optuna_for_random_stairs_from_scratch.yaml  optuna_for_random_stairs_from_scratch_no_extra_reward.yaml  optuna_for_random_trunk.yaml  optuna_for_random_trunk_with_joint_variance.yaml  optuna_for_random_trunk_with_no_groupnorm.yaml  optuna_for_random_trunk_with_smoothness_penalties.yaml  optuna_for_random_trunk_with_trunc_normal_tanh_loc.yaml  optuna_found_random_trunk_random_start_goal.yaml  optuna_found_random_trunk_random_start_goal_sota_smoothness_penalties.yaml  optuna_found_random_trunk_random_start_goal_with_noise copy.yaml  optuna_found_random_trunk_random_start_goal_with_noise_joint_variance.yaml  optuna_found_random_trunk_random_start_goal_with_noise_no_groupnorm.yaml  (+31 more)
test_configs/new configs/: average_ensembled_policy_single_pallet.yaml  average_ensembled_policy_stairs.yaml
(+2 files in other folders)
